--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dev": "nodemon bot.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Pranavius & Tuskyouup",
   "license": "ISC",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.15",
+    "eslint": "^8.50.0",
     "nodemon": "^3.0.1"
   },
   "engines": {
