Include command update in start script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "cmds": "node deploy-commands.js",
     "dev": "nodemon bot.js",
-    "start": "node bot.js"
+    "start": "npm run cmds && node bot.js"
   },
   "keywords": [],
   "author": "Pranavius & Tuskyouup",
