--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cmds": "node deploy-commands.js",
-    "dev": "nodemon bot.js",
-    "start": "npm run cmds && node bot.js"
+    "dev": "nodemon bot.js"
   },
   "keywords": [],
   "author": "Pranavius & Tuskyouup",
@@ -18,7 +17,7 @@
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": "^20"
+    "node": "20.x"
   },
   "dependencies": {
     "axios": "^1.5.0",
