--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tld-mr-helper",
-  "version": "1.1.0",
+  "name": "tld-gamon",
+  "version": "1.0.0",
   "description": "Discord bot for The Last Dynasty (US-Thrall) to use in their Discord server. Based on mr-helper by Cory Meikle",
   "main": "bot.js",
   "scripts": {
