--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tld-mr-helper",
+  "name": "tld-gamon",
   "version": "1.0.0",
   "description": "Discord bot for The Last Dynasty (US-Thrall) to use in their Discord server. Based on mr-helper by Cory Meikle",
   "main": "bot.js",
