--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
-    "discord.js": "^14.16.3",
-    "dotenv": "^16.3.1"
+    "discord.js": "^14.18.0",
+    "dotenv": "^16.3.1",
+    "node-cache": "^5.1.2"
   }
 }
